# STARE

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
Code/: CMakeLists.txt  JASPAR_to_PSCM.py  Juicebox_KR_normalization.sh  Juicebox_normalization.sh  PSCM_to_PSEM  PSCM_to_PSEM.cpp  Promoter_Windows.cpp  ReplaceInvalidChars  ReplaceInvalidChars.cpp  Reshape_toCellTF_perGene  Reshape_toCellTF_perGene.cpp  STARE.sh  STARE_ABCpp  STARE_ABCpp.cpp  STARE_ABCpp_absolute  STARE_ABCpp_absolute.cpp  STARE_MiscFunctions.cpp  STARE_MiscFunctions.h  TF_Gene_Scorer  TF_Gene_Scorer.cpp  TF_Gene_Scorer_Reshape  TF_Gene_Scorer_Reshape.cpp  TF_Gene_Scorer_parallel  TF_Gene_Scorer_parallel.cpp  TRAPmulti  TRAPmulti.cpp  compile_STARE.sh  compile_STARE_Linux.sh  compile_STARE_macOS.sh  controlTestCases.sh  runTestCases.sh
PWMs/1.0/: pwm_vertebrates_jaspar_uniprobe_original.PSEM
PWMs/2.0/: T-Cell-Example.PSEM  WBcel_jaspar_hoc_kellis.PSEM  WBcel_jaspar_hoc_kellis_all.PSEM  dro_jaspar_hoc_kellis.PSEM  dro_jaspar_hoc_kellis_transfac.PSEM  human_jaspar_hoc_kellis.PSEM  human_jaspar_hoc_kellis_transfac.PSEM  (+4 more)
Test/: ABC_example_annotation.gtf  ABC_example_regions_ChrPrefix.bed  Jaspar_PSEM.txt  example_annotation.gtf  example_exclude_regions.bed  example_sequence.fa.fai  example_sequence_chr.fa  example_sequence_chr.fa.fai  example_sequence_chr21part.fa.fai  runTestCases.sh
docs/: Affinity_Summarisation.rst  Binary_Reshape.rst  Main.rst  PSEMs_and_PSCMs.rst  PatchNotes.rst  Reference.rst  Separate_ABC.rst  Troubleshooting.rst  conf.py  index.rst
(+100 files in other folders)
